Fix padding on mobile

--- a/app/styles/components/layout/hero.scss
+++ b/app/styles/components/layout/hero.scss
@@ -20,24 +20,50 @@ layout-hero {
 		height:auto;
 		padding:120px 0 150px 0;
 		background:linear-gradient(-60deg, rgba(255,0,160,1) 0%, rgba(135,0,255,0.8) 50%, rgba(0, 0, 0, 0.4) 110%);
+
+		@include media(max-width-960) {
+			height:auto;
+			padding:120px 0 50px 0;
+		}
+		
 	}
 
 	&[products] {
 		height:auto;
 		padding:120px 0 150px 0;
 		background:linear-gradient(-60deg, rgba(255,0,160,1) 0%, rgba(135,0,255,0.8) 50%, rgba(0, 0, 0, 0.4) 110%);
+
+		@include media(max-width-960) {
+			height:auto;
+			padding:120px 0 50px 0;
+		}
+
 	}
 
 	&[lq], &[cf], &[ix], &[ml] {
 		height:auto;
 		padding:120px 0 150px 0;
 		background:linear-gradient(-60deg, rgba(255,0,160,1) 0%, rgba(135,0,255,0.8) 50%, rgba(0, 0, 0, 0.4) 110%);
+
+		@include media(max-width-960) {
+			top:0px;
+			height:auto;
+			padding:120px 0 50px 0;
+		}
+		
 	}
 
 	&[install], &[releases], &[docs], &[features], &[opensource] {
 		height:auto;
 		padding:120px 0 150px 0;
 		background:linear-gradient(-60deg, rgba(255,0,160,1) 0%, rgba(135,0,255,0.8) 50%, rgba(0, 0, 0, 0.4) 110%);
+
+		@include media(max-width-960) {
+			top:0px;
+			height:auto;
+			padding:120px 0 50px 0;
+		}
+
 	}
 
 	&[careers] {
@@ -48,7 +74,7 @@ layout-hero {
 		@include media(max-width-960) {
 			top:0px;
 			height:auto;
-			padding:120px 0 150px 0;
+			padding:120px 0 50px 0;
 		}
 	}
 
@@ -60,7 +86,19 @@ layout-hero {
 		@include media(max-width-960) {
 			top:0px;
 			height:auto;
-			padding:120px 0 150px 0;
+			padding:120px 0 50px 0;
+		}
+	}
+
+	&[blog] {
+		height:auto;
+		padding:350px 0 150px 0;
+		background-image:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("/static/img/blog/hero.jpg");
+
+		@include media(max-width-960) {
+			top:0px;
+			height:auto;
+			padding:120px 0 50px 0;
 		}
 	}
 
@@ -68,7 +106,7 @@ layout-hero {
 
 		margin-top:100px;
 
-		@include media(max-width-750) {
+		@include media(max-width-768) {
 			margin-top:50px;
 		}
 
@@ -78,7 +116,7 @@ layout-hero {
 			padding:15px 40px;
 			margin:0 25px 25px 0;
 
-			@include media(max-width-550) {
+			@include media(max-width-768) {
 				margin:0 0px 15px 0;
 			}
 
@@ -158,7 +196,7 @@ layout-hero {
 				width:90%;
 			}
 
-			@include media(max-width-950) {
+			@include media(max-width-962) {
 				width:100%;
 			}
 
@@ -183,7 +221,7 @@ layout-hero {
 				width:100%;
 			}
 
-			@include media(max-width-550) {
+			@include media(max-width-768) {
 				width:100%;
 			}
 
